--- a/app/src/main/res/layout/activity_vedio.xml
+++ b/app/src/main/res/layout/activity_vedio.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <com.maizi.maizilive.ijkplayer.media.widget.media.IjkVideoView
-        android:id="@+id/ijkvideoview"
+    <com.maizi.maizilive.view.DanmakuVideoPlayer
+        android:id="@+id/videoplayer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="200dp"/>
 </LinearLayout>
